--- a/week5/Complete Assignment 5 Modules and Classes/index.htm
+++ b/week5/Complete Assignment 5 Modules and Classes/index.htm
@@ -71,10 +71,9 @@
       &copy; FSW 113 Modern JavaScript
     </footer>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
   <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
-  <script src="js1.js"></script>
+  <script type="module" src="js/index.js"></script>
+  <script type="module" src="js/data.js"></script>
 </body>
 
 </html>
