--- a/week6/Assinment-1/index.htm
+++ b/week6/Assinment-1/index.htm
@@ -74,6 +74,7 @@
   <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
   <script type="module" src="js/index.js"></script>
   <script type="module" src="js/data.js"></script>
+  <script type="module" src="js/getData.js"></script>
 </body>
 
 </html>
