--- a/week6/Assinment-1/index.html
+++ b/week6/Assinment-1/index.html
@@ -11,9 +11,32 @@
   <link rel="stylesheet" href="css/site.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+ <style>
+   .loading{
+  display: flex;
+  justify-content: center;
+  
+}
+.loading::after{
+  content: "";
+  width: 100px;
+  height: 100px;
+  border: 10px solid transparent;
+  border-top-color: #009579;
+  border-radius: 50%;
+  animation: loading 1s ease infinite;
+}
+
+@keyframes loading {
+  to {
+    transform: rotate(1turn);
+  }
+}
+ </style>
 </head>
 
 <body>
+ 
   <div class="container">
     <header>
       <nav>
@@ -62,7 +85,9 @@
         <div class="row">
           <button class="alert alert-primary" role="alert" id="toggleButton">Hide</button>    
         </div>
+        <div class="loading"></div>
         <pre class="prettyprint lang-html">    
+          <h1 id="h1"></h1>
           <code  class="prettyprint language-json" id="resultList">This is where results will go</code>
         </pre>
       </div>
@@ -72,7 +97,10 @@
     </footer>
   </div>
   <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
+  <script type="module" src="getData.js"></script>
+  <script type="module" src="listData.js"></script>
 </body>
 
 </html>
